# cpp_for_qa_project

./: CMakeLists.txt  main.cpp  readme.md
.github/workflows/: test.yaml
benchmarks/signal_processing/: benchmark_strategy_engine.cpp
include/: square.h
include/signal_processing/: strategy_engine.hpp
src/: square.cpp
src/signal_processing/: strategy_engine.cpp
tests/: test_square.cpp
tests/signal_processing/: test_strategy_engine.cpp
